--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,17 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/Server/mysql-connector-java-5.1.38/mysql-connector-java-5.1.38-bin.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required/lucene-core-5.3.1.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required/xml-apis-1.3.03.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required extjars/classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required extjars/geronimo-jta_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required extjars/hibernate-core-5.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required extjars/hibernate-jpa-2.1-api-1.0.0.Final.jar" sourcepath="/Users/rinkeshshah/.m2/repository/org/hibernate/javax/persistence/hibernate-jpa-2.1-api/1.0.0.Final/hibernate-jpa-2.1-api-1.0.0.Final-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required extjars/jandex-2.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required extjars/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required extjars/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/rinkeshshah/Documents/Ankee/workspace/hibernate-search-5.5.2.Final/dist/lib/required/dom4j-1.6.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
